k8s/flux/clusters/tal-clu-1/infra/network/unifi-network-application/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unifi-network-application
  namespace: unifi-network-application
spec:
  template:
    spec:
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - unifi-network-application
            topologyKey: kubernetes.io/hostname
      containers:
      - name: unifi-network-application
