k8s/flux/clusters/tal-clu-1/infra/network/unifi-network-application/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: http
  namespace: unifi-network-application
spec:
  entryPoints: [ "web" ]
  routes:
  - match: Host(`unifi.homelab.emerconnelly.com`)
    kind: Rule
    middlewares:
    - name: https-redirect
      namespace: traefik
    services:
    - name: noop@internal
      kind: TraefikService
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: https
  namespace: unifi-network-application
spec:
  entryPoints: [ "websecure" ]
  routes:
  - match: Host(`unifi.homelab.emerconnelly.com`)
    kind: Rule
    services:
    - name: unifi-network-application
      port: 8443
      passHostHeader: true
      scheme: https
      serversTransport: unifi-transport
      sticky:
        cookie:
          name: traefik
          secure: true
          httpOnly: true
          sameSite: lax
  tls:
    secretName: ingress-tls
